--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="/CSS/animate.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/CSS/style.css">
+    <link rel=”stylesheet” href=” https://natsumi-h.github.io/portfolio2/style.css”/>
+   
 </head>
 
 
