--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href=" https://use.fontawesome.com/releases/v5.6.1/css/all.css">
     <link rel="stylesheet" href="/CSS/animate.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel=”stylesheet” href="https://natsumi-h.github.io/portfolio2/CSS/style.css"/>
+    <link rel="stylesheet" href="https://natsumi-h.github.io/portfolio2/CSS/style.css"/>
    
 </head>
 
