--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll.min.js"></script>
-    <script src="/JS/wow.min.js"></script>
+    <script src="https://natsumi-h.github.io/portfolio2/JS/wow.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="/JS/script.js"></script>
+    <script src="https://natsumi-h.github.io/portfolio2/JS/script.js"></script>
 
 </body>
 
