--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="service-items">
                     <div class="service-item">
                         <div class="service-item-icon">
-                            <img src="/img/service1.svg" alt="ウェブデザインアイコン">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/service1.svg" alt="ウェブデザインアイコン">
                         </div>
                         <div class="service-item-title">WEB<br>DESIGN</div>
                         <div class="service-item-content">どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。</div>
