--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
                     </div>
                     <div class="service-item">
                         <div class="service-item-icon">
-                            <img src="/img/service2.svg" alt="コーディングアイコン">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/service2.svg" alt="コーディングアイコン">
                         </div>
                         <div class="service-item-title">WEB<br>CODING</div>
                         <div class="service-item-content">どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。</div>
                     </div>
                     <div class="service-item">
                         <div class="service-item-icon">
-                            <img src="/img/service3.svg" alt="CMSアイコン">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/service3.svg" alt="CMSアイコン">
                         </div>
                         <div class="service-item-title">CMS<br>CUSTOMIZE</div>
                         <div class="service-item-content">どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。</div>
@@ -152,42 +152,42 @@
                 <div class="swiper-container">
                     <ul class="swiper-wrapper">
                         <li class="swiper-slide">
-                            <img src="/img/slide1.png" alt="実績1">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/slide1.png" alt="実績1">
                             <div class="swiper-content">
                                 <div class="swiper-title">とかくに人の世は住みにくい。</div>
                                 <div class="swiper-detail">どこへ越しても住みにくいと悟った時、詩が生れて 、画が出来る。意地を通せば窮屈だ。</div>
                             </div>
                         </li>
                         <li class="swiper-slide">
-                            <img src="/img/slide1.png" alt="実績2">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/slide1.png" alt="実績2">
                             <div class="swiper-content">
                                 <div class="swiper-title">とかくに人の世は住みにくい。</div>
                                 <div class="swiper-detail">どこへ越しても住みにくいと悟った時、詩が生れて 、画が出来る。意地を通せば窮屈だ。</div>
                             </div>
                         </li>
                         <li class="swiper-slide">
-                            <img src="/img/slide1.png" alt="実績3">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/slide1.png" alt="実績3">
                             <div class="swiper-content">
                                 <div class="swiper-title">とかくに人の世は住みにくい。</div>
                                 <div class="swiper-detail">どこへ越しても住みにくいと悟った時、詩が生れて 、画が出来る。意地を通せば窮屈だ。</div>
                             </div>
                         </li>
                         <li class="swiper-slide">
-                            <img src="/img/slide1.png" alt="実績4">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/slide1.png" alt="実績4">
                             <div class="swiper-content">
                                 <div class="swiper-title">とかくに人の世は住みにくい。</div>
                                 <div class="swiper-detail">どこへ越しても住みにくいと悟った時、詩が生れて 、画が出来る。意地を通せば窮屈だ。</div>
                             </div>
                         </li>
                         <li class="swiper-slide">
-                            <img src="/img/slide1.png" alt="実績5">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/slide1.png" alt="実績5">
                             <div class="swiper-content">
                                 <div class="swiper-title">とかくに人の世は住みにくい。</div>
                                 <div class="swiper-detail">どこへ越しても住みにくいと悟った時、詩が生れて 、画が出来る。意地を通せば窮屈だ。</div>
                             </div>
                         </li>
                         <li class="swiper-slide">
-                            <img src="/img/slide1.png" alt="実績6">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/slide1.png" alt="実績6">
                             <div class="swiper-content">
                                 <div class="swiper-title">とかくに人の世は住みにくい。</div>
                                 <div class="swiper-detail">どこへ越しても住みにくいと悟った時、詩が生れて 、画が出来る。意地を通せば窮屈だ。</div>
@@ -229,18 +229,18 @@
                     <div class="comments-left">
                         <h1 class="section-title">Comments</h1>
                         <div class="comments-item">
-                            <img src="/img/comments1.png" alt="コメント人物写真女性">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/comments1.png" alt="コメント人物写真女性">
                             <div class="comments-comment">
                                 どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。</div>
                         </div>
                         <div class="comments-item">
-                            <img src="/img/comments2.png" alt="コメント人物写真男性">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/comments2.png" alt="コメント人物写真男性">
                             <div class="comments-comment">
                                 どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。</div>
                         </div>
                     </div>
                     <div class="comments-right">
-                        <img src="/img/comments3.png" alt="オフィスワーカー男女複数名">
+                        <img src="https://natsumi-h.github.io/portfolio2/img/comments3.png" alt="オフィスワーカー男女複数名">
                     </div>
                 </div>
             </section>
