--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="詩が生まれて画ができる"/>
     <meta property="og:description" content=" ページのディスクリプション" />
     <meta property="og:site_name" content="詩が生まれて画ができる" />
-    <meta property="og:image" content="/img/mv@2x.png"/>
+    <meta property="og:image" content="https://natsumi-h.github.io/portfolio2/img/mv@2x.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" type="image/jpg" href="/favicon.ico">
@@ -426,7 +426,7 @@
             </div>
         </div>
         <div class="footer-totop">
-            <img src="/img/totop.svg" alt="トップへ戻る矢印">
+            <img src="https://natsumi-h.github.io/portfolio2/img/totop.svg" alt="トップへ戻る矢印">
         </div>
 
 
