--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Ravek"/>
     <meta property="og:description" content=" ページのディスクリプション" />
     <meta property="og:site_name" content="Ravek" />
-    <meta property="og:image" content="/img/hero.svg"/>
+    <meta property="og:image" content="https://natsumi-h.github.io/portfolio2/img/hero.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" type="image/jpg" href="/favicon.ico">
@@ -89,7 +89,7 @@
 
                 </div>
                 <div class="hero-image">
-                    <img src="/img/hero.svg" alt="デスクで仕事している女性">
+                    <img src="https://natsumi-h.github.io/portfolio2/img/hero.svg" alt="デスクで仕事している女性">
                 </div>
             </div>
         </div>
@@ -114,7 +114,7 @@
 
                     <div class="feature-item is-a">
                         <div class="feature-image-wrapper is-a">
-                            <img src="/img/feature-1.svg" alt="パソコンで作業中の男性" class="feature-image">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/feature-1.svg" alt="パソコンで作業中の男性" class="feature-image">
                         </div>
                         <div class="feature-message-frame is-a">
                             <div class="feature-number">01</div>
@@ -128,7 +128,7 @@
                     </div>
 
                     <div class="feature-item is-b">
-                        <div class="feature-image-wrapper is-b"><img src="/img/feature-2.svg" alt="デスクで作業中の女性"
+                        <div class="feature-image-wrapper is-b"><img src="https://natsumi-h.github.io/portfolio2/img/feature-2.svg" alt="デスクで作業中の女性"
                                 class="feature-image"></div>
                         <div class="feature-message-frame">
                             <div class="feature-number">02</div>
@@ -141,7 +141,7 @@
                     </div>
 
                     <div class="feature-item is-c">
-                        <div class="feature-image-wrapper is-c"><img src="/img/feature-3.svg" alt="ネットワークが連携しているイメージ"
+                        <div class="feature-image-wrapper is-c"><img src="https://natsumi-h.github.io/portfolio2/img/feature-3.svg" alt="ネットワークが連携しているイメージ"
                                 class="feature-image"></div>
                         <div class="feature-message-frame is-c">
                             <div class="feature-number">03</div>
@@ -172,14 +172,14 @@
                 <h2 class="section-subtitle">Users</h2>
                 <h1 class="section-title">導入実績</h1>
                 <div class="users-items">
-                    <div class="users-item"><img src="/img/users.svg" alt="企業ロゴ" class="users-image"></div>
-                    <div class="users-item"><img src="/img/users.svg" alt="企業ロゴ" class="users-image"></div>
-                    <div class="users-item"><img src="/img/users.svg" alt="企業ロゴ" class="users-image"></div>
-                    <div class="users-item"><img src="/img/users.svg" alt="企業ロゴ" class="users-image"></div>
-                    <div class="users-item"><img src="/img/users.svg" alt="企業ロゴ" class="users-image"></div>
-                    <div class="users-item"><img src="/img/users.svg" alt="企業ロゴ" class="users-image"></div>
-                    <div class="users-item"><img src="/img/users.svg" alt="企業ロゴ" class="users-image"></div>
-                    <div class="users-item"><img src="/img/users.svg" alt="企業ロゴ" class="users-image"></div>
+                    <div class="users-item"><img src="https://natsumi-h.github.io/portfolio2/img/users.svg" alt="企業ロゴ" class="users-image"></div>
+                    <div class="users-item"><img src="https://natsumi-h.github.io/portfolio2/img/users.svg" alt="企業ロゴ" class="users-image"></div>
+                    <div class="users-item"><img src="https://natsumi-h.github.io/portfolio2/img/users.svg" alt="企業ロゴ" class="users-image"></div>
+                    <div class="users-item"><img src="https://natsumi-h.github.io/portfolio2/img/users.svg" alt="企業ロゴ" class="users-image"></div>
+                    <div class="users-item"><img src="https://natsumi-h.github.io/portfolio2/img/users.svg" alt="企業ロゴ" class="users-image"></div>
+                    <div class="users-item"><img src="https://natsumi-h.github.io/portfolio2/img/users.svg" alt="企業ロゴ" class="users-image"></div>
+                    <div class="users-item"><img src="https://natsumi-h.github.io/portfolio2/img/users.svg" alt="企業ロゴ" class="users-image"></div>
+                    <div class="users-item"><img src="https://natsumi-h.github.io/portfolio2/img/users.svg" alt="企業ロゴ" class="users-image"></div>
                 </div>
             </div>
         </section>
@@ -190,7 +190,7 @@
                 <div class="flow-items">
                     <div class="flow-item flow-item-1">
                         <div class="flow-image-wrapper">
-                            <img src="/img/flow-1.svg" alt="無料トライアル" class="flow-image">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/flow-1.svg" alt="無料トライアル" class="flow-image">
                         </div>
                         <div class="flow-lead">無料トライアルを開始</div>
                         <div class="flow-sublead">まずはRavekの使用感をお試しください。最初の14日間は無料でご使用いただけます。</div>
@@ -202,7 +202,7 @@
                     </div>
                     <div class="flow-item flow-item-2">
                         <div class="flow-image-wrapper">
-                            <img src="/img/flow-2.svg" alt="本格導入" class="flow-image">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/flow-2.svg" alt="本格導入" class="flow-image">
                         </div>
                         <div class="flow-lead">本格導入をサポート</div>
                         <div class="flow-sublead">Ravekを気に入っていただけましたら、適したプランで導入ください。導入にお困りの際は、メール、またはチャットにてサポートいたします。</div>
@@ -214,7 +214,7 @@
                     
                     <div class="flow-item flow-item-3">
                         <div class="flow-image-wrapper">
-                            <img src="/img/flow-3.svg" alt="全プロジェクトへ展開" class="flow-image">
+                            <img src="https://natsumi-h.github.io/portfolio2/img/flow-3.svg" alt="全プロジェクトへ展開" class="flow-image">
                         </div>
                         <div class="flow-lead">全プロジェクトへ展開</div>
                         <div class="flow-sublead">Ravekは段階的な導入がおすすめです。主要プロジェクトでの運用に慣れたら、全プロジェクトへ展開を行いましょう。</div> 
@@ -365,7 +365,7 @@
         <div class="footer-inner">
             <div class="footer-items">
                 <div class="footer-logo">
-                    <img src="/img/logo-footer.svg" alt="ロゴ">
+                    <img src="https://natsumi-h.github.io/portfolio2/img/logo-footer.svg" alt="ロゴ">
                 </div>
                 <ul class="footer-nav">
                     <li class="footer-nav-list">会社概要</li>
