--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
@@ -24,10 +24,10 @@
     <link rel="shortcut icon" type="image/jpg" href="/favicon.ico">
     <!-- <link rel="stylesheet" href=" https://use.fontawesome.com/releases/v5.6.1/css/all.css"> -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="https://natsumi-h.github.io/portfolio2/CSS/animate.css">
+    <link rel="stylesheet" href="/CSS/animate.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="https://natsumi-h.github.io/portfolio2/CSS/reset.css">
-    <link rel="stylesheet" href="https://natsumi-h.github.io/portfolio2/CSS/style.css"/>
+    <link rel="stylesheet" href="/CSS/reset.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 
@@ -310,10 +310,10 @@
                             <div class="button-price-bottom"><a>無料で使ってみる</a></div>
                         </td>
                         <td class="th-button">
-                            <div class="button-price-bottom is-basic"><a class="is-basic">無料で使ってみる</a>
+                            <div class="button-price-bottom is-basic"><a class="is-basic">無料で使ってみる</a></div>
                         </td>
                         <td class="th-button">
-                            <div class="button-price-bottom"><a>無料で使ってみる</a>
+                            <div class="button-price-bottom"><a>無料で使ってみる</a></div>
                         </td>
                     </tr>
 
@@ -380,9 +380,9 @@
             <div class="footer-sns">
                 <div class="sns-head">Share on SNS</div>
                 <ul class="sns-logo-wrapper">
-                    <li class="sns-logo twitter"><a href="#" alt="ツイッターアイコン"><i class="fab fa-twitter sns-size twitter"></i></a></li>
-                    <li class="sns-logo"><a href="#" alt="インスタグラムアイコン" ><i class="fab fa-instagram sns-size"></i></a></li>
-                    <li class="sns-logo"><a href="#" alt="フェイスブックアイコン"><i class="fab fa-facebook sns-size"></i></a></li>
+                    <li class="sns-logo twitter"><a href="#"><i class="fab fa-twitter sns-size twitter"></i></a></li>
+                    <li class="sns-logo"><a href="#"><i class="fab fa-instagram sns-size"></i></a></li>
+                    <li class="sns-logo"><a href="#"><i class="fab fa-facebook sns-size"></i></a></li>
 
                 </ul>
             </div>
@@ -393,9 +393,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll.min.js"></script>
-    <script src="https://natsumi-h.github.io/portfolio2/JS/wow.min.js"></script>
+    <script src="/JS/wow.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="https://natsumi-h.github.io/portfolio2/JS/script.js"></script>
+    <script src="/JS/script.js"></script>
 
 </body>
 
